Fixed toggler-icon position on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,13 +34,20 @@ h1 {
   text-transform: lowercase;
   font-size: 1rem;
   padding: 0.5rem 2rem;
-  /* padding-right: 2rem; */
+  margin-bottom: 2rem;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .btn-white:hover {
   background-color: #ffff;
   color: var(--main-accent-color);
   border: 2px solid var(--main-accent-color);
+  transition: all 0.6s ease-in;
+  -webkit-transition: all 0.6s ease-in;
+  -moz-transition: all 0.6s ease-in;
+  -ms-transition: all 0.6s ease-in;
+  -o-transition: all 0.6s ease-in;
 }
 
 /* Section Title*/
@@ -85,7 +92,7 @@ h2.section-title-heading {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  width: 15%;
+  width: 70px;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -98,6 +105,11 @@ h2.section-title-heading {
 
 .navbar-light .navbar-nav .nav-link:hover {
   color: #27778b;
+  transition: all 0.6s ease-in;
+  -webkit-transition: all 0.6s ease-in;
+  -moz-transition: all 0.6s ease-in;
+  -ms-transition: all 0.6s ease-in;
+  -o-transition: all 0.6s ease-in;
 }
 
 .navbar.active {
@@ -106,14 +118,6 @@ h2.section-title-heading {
 }
 
 /* ================= HERO ================= */
-/* .hero-img {
-  transform: skewX(-15deg);
-  -webkit-transform: skewX(-15deg);
-  -moz-transform: skewX(-15deg);
-  -ms-transform: skewX(-15deg);
-  -o-transform: skewX(-15deg);
-} */
-
 #hero {
   background-image: linear-gradient(
       to right,
@@ -159,10 +163,10 @@ h2.section-title-heading {
 }
 
 .image-box img {
-  width: 75%;
+  width: 79%;
   position: absolute;
-  top: 1rem;
-  left: 11rem;
+  top: 2rem;
+  left: 6.5rem;
   z-index: 1;
   overflow: hidden;
 }
@@ -420,7 +424,7 @@ h2.section-title-heading {
   color: #ffff;
 }
 
-/* ================= PRICING ================= */
+/* ================= CONTACT ================= */
 #contact {
   background-color: #fafafa;
   padding: 2rem 0 7rem 0;
@@ -466,6 +470,11 @@ h2.section-title-heading {
   color: var(--main-accent-color);
   background: #ffff;
   border: 2px solid var(--main-accent-color);
+  transition: all 0.6s ease-in;
+  -webkit-transition: all 0.6s ease-in;
+  -moz-transition: all 0.6s ease-in;
+  -ms-transition: all 0.6s ease-in;
+  -o-transition: all 0.6s ease-in;
 }
 
 #contact .contact-address h3 {
@@ -483,7 +492,7 @@ h2.section-title-heading {
 
 #contact .contact-address .contact-details ul li {
   color: var(--body-color);
-  font-size: 1.2rem;
+  font-size: 1.15rem;
   padding-bottom: 0.8rem;
 }
 
@@ -491,10 +500,10 @@ h2.section-title-heading {
   color: var(--main-accent-color);
 }
 
-/* ================= PRICING ================= */
+/* ================= FOOTER ================= */
 #footer {
   background-color: #2b323f;
-  padding: 6rem 0 2rem 0;
+  padding: 6.5rem 0 2rem 0;
   position: relative;
 }
 
